Fix #24 -- Add overflow:auto to .endpoint class

--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ body pre {
 .endpoint {
   width: 100%;
   display: flex;
+  overflow-x: auto;
 }
 
 .endpoint-method {
